--- a/style.css
+++ b/style.css
@@ -167,11 +167,17 @@ header .menu{
 #planos{
     flex-direction: column;
     min-height: 100vh;
+    margin-top: 50px;
+}
+
+#planos h2{
+    font-size: 32px;
 }
 
 .list-planos{
     display: flex;
     align-items: flex-end;
+    justify-content: space-between;
 }
 
 .item-plano{
@@ -179,6 +185,7 @@ header .menu{
     border: 5px solid #122a57;
     margin-right: 20px;
     padding: 10px;
+    max-width: 240px;
 }
 
 .item-plano .btn{
@@ -191,6 +198,7 @@ header .menu{
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin-top: 20px;
 }
 
 .item-plano h3::after{
@@ -206,4 +214,34 @@ header .menu{
     padding: 10px 20px;
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px;
 }
+
+.item-plano ul li::before{
+    content: " ";
+    width: 10px;
+    height: 10px;
+    background-color: #122a57;
+    margin-right: 5px;
+}
+
+.item-plano ul li{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+footer{
+    background-color: #122a57;
+    height: 70px;
+    display: flex;
+    align-items: center;
+}
+
+footer .footer{
+    justify-content: space-between;
+    color: #fff;
+}
+
+/* Mobile */
+
